--- a/discovery.html
+++ b/discovery.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="theme.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="discovery.css">
     <title>Document</title>
 </head>
 
 <body>
+    <input type="checkbox" id="theme-toggle">
 
     <header class="my-header">
         <div class="logo-div">
@@ -17,16 +20,16 @@
         </div>
         <div class="nav-bar">
             <a href="home.html">Home</a>
-            <a href="news_final.html">News</a>
+            <a href="news.html">News</a>
             <a href="events.html">Events</a>
-            <a id="selected-button" href="discovery.html">Discovery</a>
-            <a href="resources_final.html">Resources</a>
+            <a id="selected-button" href="discovery.html">Directory</a>
+            <a href="resources.html">Resources</a>
             <a href="contacts.html">Contact</a>
         </div>
         <div class="theme-change">
-            <button>
-                <img src="brightness-and-contrast.png" alt="">
-            </button>
+            <label for="theme-toggle" class="theme-toggle-label">
+                <img src="brightness-and-contrast.png" alt="Theme Toggle">
+            </label>
         </div>
     </header>
 
@@ -60,14 +63,16 @@
         </div>
         <div class="row">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">☕</p>
+                </div>
                 <div class="alignment">
                     <p class="title">The Daily Grind Cafe</p>
                     <p class="description">Artisan coffee and fresh pastries in a cozy atmosphere</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.dailydring.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.dailydring.com</div>
+                        <div class="item">📍 AK-Brohi Road H-11</div>
                     </div>
                 </div>
             </div>
@@ -79,14 +84,16 @@
 
         <div class="row">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">🍕</p>
+                </div>
                 <div class="alignment">
                     <p class="title">Mama Rosa's Pizzeria</p>
                     <p class="description">Authentic Italian pizza and pasta since 1985</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.mamarosa.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.mamarosa.com</div>
+                        <div class="item">📍 186 Markaz G-11</div>
                     </div>
                 </div>
             </div>
@@ -96,14 +103,16 @@
 
         <div class="row">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">🥗</p>
+                </div>
                 <div class="alignment">
                     <p class="title">Green Leaf Bistro</p>
                     <p class="description">Farm-to-table dining with seasonal organic menu</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.greenlead.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.greenleaf.com</div>
+                        <div class="item">📍 254 Elm Street</div>
                     </div>
                 </div>
             </div>
@@ -128,14 +137,16 @@
 
         <div class="row1">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">🌸</p>
+                </div>
                 <div class="alignment">
-                    <p class="title">The Daily Grind Cafe</p>
-                    <p class="description">Artisan coffee and fresh pastries in a cozy atmosphere</p>
+                    <p class="title">Bloom Flower Shop</p>
+                    <p class="description">Fresh flowers and custom arrangements for any occasion</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.dailydring.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.bloomflowers.com</div>
+                        <div class="item">📍 117 Rose Lane</div>
                     </div>
                 </div>
             </div>
@@ -147,14 +158,16 @@
 
         <div class="row1">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">📚</p>
+                </div>
                 <div class="alignment">
-                    <p class="title">Mama Rosa's Pizzeria</p>
-                    <p class="description">Authentic Italian pizza and pasta since 1985</p>
+                    <p class="title">Pages & Co. Bookstore</p>
+                    <p class="description">Independent bookstore with curated selections and cozy reading nooks</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.mamarosa.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.pagesandco.com</div>
+                        <div class="item">📍 742 Knowledge Street</div>
                     </div>
                 </div>
             </div>
@@ -164,14 +177,16 @@
 
         <div class="row1">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">👗</p>
+                </div>
                 <div class="alignment">
-                    <p class="title">Green Leaf Bistro</p>
-                    <p class="description">Farm-to-table dining with seasonal organic menu</p>
+                    <p class="title">Vintage Threads Boutique</p>
+                    <p class="description">Carefully curated vintage and contemporary fashion</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.greenlead.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.threads.com</div>
+                        <div class="item">📍 806 Library Road</div>
                     </div>
                 </div>
             </div>
@@ -196,14 +211,16 @@
 
         <div class="row2">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">🦷</p>
+                </div>
                 <div class="alignment">
-                    <p class="title">The Daily Grind Cafe</p>
-                    <p class="description">Artisan coffee and fresh pastries in a cozy atmosphere</p>
+                    <p class="title">Bright Smile Dental</p>
+                    <p class="description">Family dentistry with a gentle, caring approach</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.dailydring.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.brightsmile.com</div>
+                        <div class="item">📍 412 Paris Town</div>
                     </div>
                 </div>
             </div>
@@ -215,14 +232,16 @@
 
         <div class="row2">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">🔧</p>
+                </div>
                 <div class="alignment">
-                    <p class="title">Mama Rosa's Pizzeria</p>
-                    <p class="description">Authentic Italian pizza and pasta since 1985</p>
+                    <p class="title">QuickFix Plumbing</p>
+                    <p class="description">24/7 emergency plumbing services you can trust</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.mamarosa.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.quickfix.com</div>
+                        <div class="item">📍 732 Plumb Plaza</div>
                     </div>
                 </div>
             </div>
@@ -232,14 +251,16 @@
 
         <div class="row2">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">💆</p>
+                </div>
                 <div class="alignment">
-                    <p class="title">Green Leaf Bistro</p>
-                    <p class="description">Farm-to-table dining with seasonal organic menu</p>
+                    <p class="title">Zen Wellness Spa</p>
+                    <p class="description">Massage therapy, facials, and holistic wellness treatments</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.greenlead.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.zenwell.com</div>
+                        <div class="item">📍 853 Kenny Street</div>
                     </div>
                 </div>
             </div>
@@ -264,14 +285,16 @@
 
         <div class="row3">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">🏋️‍♂️</p>
+                </div>
                 <div class="alignment">
-                    <p class="title">The Daily Grind Cafe</p>
-                    <p class="description">Artisan coffee and fresh pastries in a cozy atmosphere</p>
+                    <p class="title">PowerFit Gym</p>
+                    <p class="description">State-of-the-art equipment and personal training</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.dailydring.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.powerfitness.com</div>
+                        <div class="item">📍 732 Fitness Boulevard</div>
                     </div>
                 </div>
             </div>
@@ -283,14 +306,16 @@
 
         <div class="row3">
             <div class="aligned">
-                <div class="icon"><img src="tea.jpg" alt=""></div>
+                <div class="icon">
+                    <p class="icon-img">🧘</p>
+                </div>
                 <div class="alignment">
-                    <p class="title">Mama Rosa's Pizzeria</p>
-                    <p class="description">Authentic Italian pizza and pasta since 1985</p>
+                    <p class="title">Harmony Yoga Studio</p>
+                    <p class="description">Yoga classes for all levels in a peaceful environment</p>
                     <div class="list">
-                        <div class="item">+92-123-1234567</div>
-                        <div class="item">www.mamarosa.com</div>
-                        <div class="item">AK-Brohi Road H-11</div>
+                        <div class="item">📞 +92-123-1234567</div>
+                        <div class="item">🌐 www.harmonystudio.com</div>
+                        <div class="item">📍 638 DHA-2</div>
                     </div>
                 </div>
             </div>
@@ -300,16 +325,19 @@
         <div class="spacings"></div>
 
         <div class="invitation">
-        <div id="message">
-            <div class="inner-content">
-                <p>Join Our Community Today</p>
-                <br><br>
-                <p>Be part of something special. Connect with your neighbors and help build a stronger, more vibrant community together.</p>
-                <br><br>
+            <div id="message">
+                <div class="inner-content">
+                    <p>Is your business not listed?</p>
+                    <br><br>
+                    <p>Join our directory and connect with more customers in the community!</p>
+                    <br><br>
+                </div>
+                <div style="display: flex; justify-content: center;">
+
+                    <a class="get-started" href="home.html">Submit Your Business</a>
+                </div>
             </div>
-            <a class="get-started" href="contact.html">Get Started</a>  
         </div>
-    </div>
 
     </section>
 
