--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
     <input type="checkbox" id="theme-toggle">
     <header class="my-header">
         <div class="logo-div">
-            <img class="logo" src="kela.png" alt="">
+            <img class="logo" src="logo.jpg" alt="">
             <p>Community Hub</p>
         </div>
         <div class="nav-bar">
@@ -115,9 +115,9 @@
                     <div class="follow">Follow Us
                     </div>
                     <div class="contact">
-                        <div class="app app1"><img src="/contacts/images/facebook.png" class="img1 img" alt=""></div>
-                        <div class="app app2"><img src="/contacts/images/insta.png" class="img2 img" alt=""></div>
-                        <div class="app app3"><img src="/contacts/images/twitter.png" class="img3 img " alt=""></div>
+                        <div class="app app1"><img src="fb (2).png" class="img1 img" alt=""></div>
+                        <div class="app app2"><img src="insta.PNG" class="img2 img" alt=""></div>
+                        <div class="app app3"><img src="twitter.PNG" class="img3 img " alt=""></div>
                     </div>
                 </div>
                 <div class="right2">
@@ -135,7 +135,7 @@
         <div class="footer-content">
             <div class="footer-brand">
                 <div class="brand-header">
-                    <div class="brand-logo"><img src="kela.png" alt=""></div>
+                    <div class="brand-logo"><img src="logo.jpg" alt=""></div>
                     <span class="brand-name">Community Hub</span>
                 </div>
                 <p class="brand-tagline">
