--- a/discovery.html
+++ b/discovery.html
@@ -15,7 +15,7 @@
 
     <header class="my-header">
         <div class="logo-div">
-            <img class="logo" src="kela.png" alt="">
+            <img class="logo" src="logo.jpg" alt="">
             <p>Community Hub</p>
         </div>
         <div class="nav-bar">
@@ -345,7 +345,7 @@
         <div class="footer-content">
             <div class="footer-brand">
                 <div class="brand-header">
-                    <div class="brand-logo"><img src="kela.png" alt=""></div>
+                    <div class="brand-logo"><img src="logo.jpg" alt=""></div>
                     <span class="brand-name">Community Hub</span>
                 </div>
                 <p class="brand-tagline">
