Home.html renamed to index.html

--- a/discovery.html
+++ b/discovery.html
@@ -19,7 +19,7 @@
             <p>Community Hub</p>
         </div>
         <div class="nav-bar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="news.html">News</a>
             <a href="events.html">Events</a>
             <a id="selected-button" href="discovery.html">Directory</a>
@@ -334,7 +334,7 @@
                 </div>
                 <div style="display: flex; justify-content: center;">
 
-                    <a class="get-started" href="home.html">Submit Your Business</a>
+                    <a class="get-started" href="index.html">Submit Your Business</a>
                 </div>
             </div>
         </div>
@@ -356,7 +356,7 @@
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul class="footer-links">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="discovery.html">Business Directory</a></li>
                     <li><a href="resources.html">Resources</a></li>
@@ -367,9 +367,9 @@
                 <h3>Community</h3>
                 <ul class="footer-links">
                     <li><a href="news.html">Latest News</a></li>
-                    <li><a href="home.html">About Us</a></li>
-                    <li><a href="home.html">Volunteer</a></li>
-                    <li><a href="home.html">Privacy Policy</a></li>
+                    <li><a href="index.html">About Us</a></li>
+                    <li><a href="index.html">Volunteer</a></li>
+                    <li><a href="index.html">Privacy Policy</a></li>
                 </ul>
             </div>
 
