--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
             <p>Community Hub</p>
         </div>
         <div class="nav-bar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a id="selected-button" href="news.html">News</a>
             <a href="events.html">Events</a>
             <a href="discovery.html">Directory</a>
@@ -153,7 +153,7 @@
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul class="footer-links">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="discovery.html">Business Directory</a></li>
                     <li><a href="resources.html">Resources</a></li>
@@ -164,9 +164,9 @@
                 <h3>Community</h3>
                 <ul class="footer-links">
                     <li><a href="news.html">Latest News</a></li>
-                    <li><a href="home.html">About Us</a></li>
-                    <li><a href="home.html">Volunteer</a></li>
-                    <li><a href="home.html">Privacy Policy</a></li>
+                    <li><a href="index.html">About Us</a></li>
+                    <li><a href="index.html">Volunteer</a></li>
+                    <li><a href="index.html">Privacy Policy</a></li>
                 </ul>
             </div>
 
